tests/diagnostics/catalog/snapshots/ir/IR0025.snap
error[IR0025]: IR_E_IMPORT_NOT_FOUND
 --> tests/diagnostics/catalog/sources/ir/IR0025.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0025
  = help: keep IR validation diagnostics structured and catalog-backed
